@@ -82,8 +82,8 @@ sub write_makefile
                    CONFIGURE    => \&init,
 
                    PREREQ_PM    => { 'Class::Factory::Util' => 1.3,
-                                     'DateTime::Locale' => 0.03,
-                                     'DateTime::TimeZone' => 0.25,
+                                     'DateTime::Locale' => 0.09,
+                                     'DateTime::TimeZone' => 0.26,
                                      'Params::Validate' => 0.72,
                                      'Pod::Man'    => 1.14,
                                      'Test::More'  => 0,
