@@ -17,6 +17,11 @@ trace.
 - Add a new in_units method to DateTime::Duration.  Patch by Andrew
 Pimlott.
 
+- Rely on DateTime::TimeZone and DateTime::Locale having their own
+Storable hooks, as opposed to handling them in DateTime.pm's own
+Storable hooks.  This should fix RT ticket #5542, reported by Dan
+Rowles (I hope).
+
 [ BUG FIXES ]
 
 - DateTime::Duration's is_positive, is_zero, and is_negative methods
